<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu"
    android:background="@color/green_border">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewFS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/field_size"
            android:textAlignment="center"
            android:textSize="25sp" />

        <RadioGroup
            android:id="@+id/game_mode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewGM" >

            <RadioButton
                android:id="@+id/random"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="60dp"
                android:text="@string/rand"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/intelligence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/intell" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewGM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_mode"
            android:textAlignment="center"
            android:textSize="25sp" />

        <Button
            android:id="@+id/three_to_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/light_grey"
            android:text="@string/three_to_three" />

        <Button
            android:id="@+id/five_to_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/light_grey"
            android:text="@string/five_to_five" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>